[I] E4: Flex: Fixed the margins and text alignment

--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -7,14 +7,18 @@ body {
 .parent-container {
     display: flex;
     flex-direction: row;
-    margin: 50px;
+    margin: 32px;
 }
 
 .child-container {
     display: flex;
     flex-direction: column;
-    text-align: center;
     align-items: center;
+    margin: 0px 52px;
+}
+
+.text {
+    text-align: center;
 }
 
 img {
@@ -26,6 +30,7 @@ img {
   font-size: 36px;
   font-weight: 900;
   text-align: center;
+  align-items: center;
 }
 
 /* do not edit this footer */
